[package]
name = "zyoflow-sub"
version = "0.1.0"
edition = "2021"

# 獨立 workspace 根，避免被上層目錄的 workspace 連動
[workspace]

[dependencies]
eframe = "0.28"
tray-icon = "0.19"
tokio = { version = "1", features = ["rt-multi-thread", "net"] }
axum = "0.7"
serde_json = "1"
ureq = "2"

# Windows：用 Win32 ShowWindow 直接控制視窗顯示/隱藏（繞過 eframe 隱藏後停止迴圈的問題）
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "windef"] }
